plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'codegym.c10'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starter
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Security (JWT)
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Spring AOP for logging aspect
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// Spring Cache + Caffeine
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

	// JJWT (JSON Web Token) - Cần cả 3 phần
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Hỗ trợ JSON

	// Spring Data JPA + MySQL
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'mysql:mysql-connector-java:8.0.33'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Lombok (Tự động tạo Getter, Setter)
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Test (JUnit & Spring Boot Test)
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '6.4.3'

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'

}

tasks.named('test') {
	useJUnitPlatform()
}
